--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Component">Component</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="TagHelper">TagHelper</a></li>
+                    <li><a asp-area="" asp-controller="Persons" asp-action="Index">Persons</a></li>
                 </ul>
             </div>
         </div>
