--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,2 @@
-﻿@using MvcApp
-@using MvcApp.ViewComponents
-
+﻿@using MvcApp @using MvcApp.ViewComponents 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
